hphp/hack/test/typecheck/xhp_attr_23.php.exp
File "xhp_attr_23.php", line 6, characters 13-15:
No property `:bar` in `:foo` (Typing[4053])
  File "XHPTest.hhi", line 6, characters 12-24:
  Did you mean `_children` instead?
  File "xhp_attr_23.php", line 6, characters 9-11:
  This is why I think it is an object of type :foo
  File "xhp_attr_23.php", line 3, characters 7-10:
  Declaration of `:foo` is here
